[package]
name = "xfiles"
version = "0.1.0"
edition = "2024"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]

###############################################################################
description = "Twitter (X) as a public filesystem."
documentation = "https://docs.rs/xfiles"
homepage = "https://github.com/cryptopatrick/xfiles"
repository = "https://github.com/cryptopatrick/xfiles"
readme = "README.md"
keywords = ["<KEYWORD1>", "<KEYWORD2>" ]
license = "MIT"
autotests = false

###############################################################################
[lib]
name = "xfiles"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test.rs"

###############################################################################
[dependencies]
