[package]
name = "xfiles"
version = "0.2.0"
edition = "2024"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]

###############################################################################
description = "Persistence of data using X, formerly known as Twitter, as a public filesystem."
documentation = "https://docs.rs/xfiles"
homepage = "https://github.com/cryptopatrick/xfiles"
repository = "https://github.com/cryptopatrick/xfiles"
readme = "README.md"
keywords = ["twitter", "persistence", "agents"]
category = ["database-implementations"]
license = "MIT"
autotests = false

###############################################################################
[lib]
name = "xfiles"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test.rs"

###############################################################################
[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# HTTP client for Twitter API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
blake3 = "1.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
